--- a/config/wrightmi/pos-txn-monitor-dotnet/delivery.yml
+++ b/config/wrightmi/pos-txn-monitor-dotnet/delivery.yml
@@ -17,6 +17,8 @@ spec:
       annotations:
         conventions.carto.run/applied-conventions: appliveview-sample/app-live-view-appflavour-check
         developer.conventions/target-containers: workload
+        kubectl.kubernetes.io/last-applied-configuration: |
+          {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"app.kubernetes.io/part-of":"tanzu-edge-pos","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"edge"},"name":"pos-txn-monitor-dotnet","namespace":"wrightmi"},"spec":{"params":[{"name":"gitops_server_address","value":"ssh://git@github.com"},{"name":"gitops_repository_owner","value":"mwright-pivotal"},{"name":"gitops_repository_name","value":"POSTxnMonitor-ops"}],"source":{"git":{"ref":{"branch":"main"},"url":"ssh://git@github.com/mwright-pivotal/POSTxnMonitor"}}}}
       labels:
         app.kubernetes.io/component: run
         app.kubernetes.io/part-of: tanzu-edge-pos
