--- a/config/wrightmi/pos-txn-monitor-dotnet/deliverable.yml
+++ b/config/wrightmi/pos-txn-monitor-dotnet/deliverable.yml
@@ -7,7 +7,7 @@ metadata:
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: edge
     app.kubernetes.io/component: deliverable
-    app.tanzu.vmware.com/deliverable-type: web
+    app.tanzu.vmware.com/deliverable-type: edge
 spec:
   source:
     image: harbor.eqix.vmwedge.com/apps/pos-txn-monitor-dotnet-wrightmi-bundle:c1a3b5dc-668d-420c-af9b-eb6b0b256dd8
